@@ -1,0 +1,89 @@
+%define is_mandrake %(test -e /etc/mandrake-release && echo 1 || echo 0)
+%define is_suse %(test -e /etc/SuSE-release && echo 1 || echo 0)
+%define is_fedora %(test -e /etc/fedora-release && echo 1 || echo 0)
+
+%define dist redhat
+%define disttag rh
+
+%if %is_mandrake
+%define dist mandrake
+%define disttag mdk
+%endif
+%if %is_suse
+%define dist suse
+%define disttag suse
+%endif
+%if %is_fedora
+%define dist fedora
+%define disttag rhfc
+%endif
+
+%define name @PACKAGE_NAME@
+%define version @PACKAGE_VERSION@
+
+%define distver %(release="`rpm -q --queryformat='%{VERSION}' %{dist}-release 2>/dev/null`" ; if test $? != 0 ; then release="" ; fi ; echo "$release")
+
+%define release @rpm_release@.%{disttag}%{distver}
+
+Name: @PACKAGE_NAME@
+Summary: @PACKAGE_NAME@ is a C++ library of mathematical, signal processing, speech processing, and communications classes and functions
+Version: %{version}
+Release: %{release}
+Source: http://prdownloads.sourceforge.net/itpp/%{name}-%{version}.tar.gz?download
+Group: System Environment/Libraries
+License: GPL
+Packager: Adam Piatyszek <ediap@users.sourceforge.net>
+URL: http://itpp.sourceforge.net/
+BuildRoot: %{_tmppath}/%{name}-%{version}-buildroot
+Requires: fftw3 >= 3.0.0
+Requires: fftw3-devel >= 3.0.0
+Provides: %{name}-devel = %{version}-%{release}
+Prereq: /sbin/ldconfig
+Prefix: %{_prefix}
+
+%description 
+IT++ is a library of mathematical, signal processing, speech processing, and
+communications classes and functions. It has been developed by researchers in
+these areas.
+The kernel of the package are templated vector and matrix classes and lots of
+functions for vectors and matrices. As such the kernel is similar to the matlab
+functions.
+In order to use all functionality provided in the IT++ library it is required
+that FFTW, CBLAS (or ATLAS) and LAPACK libraries are installed on your
+computer. Optionally an optimized Intel Math Kernel Library (MKL) can be used
+instead. It is possible to compile and use IT++ without FFTW, ATLAS (or CBLAS)
+and LAPACK (or without MKL), but the functionality will be reduced. 
+
+%prep
+%setup -q
+
+%build
+%{configure}
+make
+
+%install
+[ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
+%makeinstall
+
+%clean
+[ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
+
+%post
+/sbin/ldconfig
+
+%postun
+/sbin/ldconfig
+
+%files
+%defattr(-,root,root,-)
+%doc AUTHORS ChangeLog COPYING INSTALL NEWS README TODO
+%{_libdir}/*.la
+%{_libdir}/*.so
+%{_libdir}/*.so.*
+%{_libdir}/pkgconfig/%{name}.pc
+%{_includedir}/itpp
+%{_datadir}/doc
+
+%changelog
+* Fri Dec 23 2005  Adam Piatyszek  <ediap@users.sourceforge.net>
+- Initial spec file prepared
